cmake_minimum_required(VERSION 3.10)
project(ToyCLexer)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(toyc_lexer main.cpp lexer.cpp lexer.h)
set_target_properties(toyc_lexer PROPERTIES OUTPUT_NAME "toyc_lexer")
target_compile_options(toyc_lexer PRIVATE -Wall -Wextra -O2)
